# easy-store

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: schemas.py
src/database/: crud.py  models.py
tests/: mock_db.py  test_file.py  test_json.py
