[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Akeem King", email = "akeemtlking@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.22",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}

